2007-05-21  Sven Neumann  <sven@gimp.org>

	* app/dialogs/about-dialog.c: use 'program-name' instead of 'name'
	when compiling against GTK+ >= 2.11.0 (see bug #345822). Also set
	the title explicitely (see bug #418434).

2007-05-21  Sven Neumann  <sven@gimp.org>

	* app/core/gimptemplate.c: use a #define for the default resolution.

2007-05-20  Simon Budig  <simon@gimp.org>

	* plug-ins/common/tiff-save.c: correctly pad the path name.

2007-05-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c: moved duplicated code to a utility
	function.

2007-05-20  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainercombobox.c
	* app/widgets/gimpcontainerentry.c
	* app/widgets/gimpcontainertreeview.c: manage GtkTreeIters with
	gtk_tree_iter_copy/gtk_tree_iter_free instead of g_new/g_free.

2007-05-19  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimagefile.c (gimp_imagefile_get_desc_string): make
	sure the description contains no empty lines.

2007-05-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: try to use the window name as
	layer name.

2007-05-18  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: tweaked the page header.

2007-05-18  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpintstore.c (gimp_int_store_add_empty): if we
	free the iter with gtk_tree_iter_free() we must also allocate it
	with gtk_tree_iter_copy() or gslice will explode.

2007-05-18  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/preferences-dialog.c (prefs_dialog_new): made the
	page header look like a selected list element.

2007-05-18  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: also removed the frame around
	the page header.

2007-05-17  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c: Applied patch from
	Eric Lamarque that optimizes backchar() use. See bug #374854.

2007-05-17  Sven Neumann  <sven@gimp.org>
